name:                yampa-backends-sdl
version:             0.10.4
synopsis:            A simple SDL backend for Yampa signals.
homepage:            http://github.com/ivanperez-keera/Yampa
license:             BSD3
license-file:        LICENSE
author:              Ivan Perez
maintainer:          ivan.perez@keera.co.uk
category:            FRP, Graphics, Multimedia
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     FRP.Yampa.Backends.SDL
  build-depends:       base >=4.7 && <5, Yampa, yampa-signals, SDL
  hs-source-dirs:      src
  default-language:    Haskell2010
